project('Fraglog','cpp')

lib_log = library('Fraglog','Fraglog.cpp')

lib_log_dep = declare_dependency(link_with:lib_log,include_directories: include_directories('.'))
# testBench = 0
# src = files('Fraglog.cpp')
# #src += files('main.cpp') 
#
# lib = library('Froglog',src)
#
# if testBench == 1 
#   executable('TestBench','main.cpp',link_with : lib)
# endif
